--- a/languages/wplyr.pot
+++ b/languages/wplyr.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: WPlyr Media Block\n"
 "POT-Creation-Date: 2019-07-19 07:48+0530\n"
 "PO-Revision-Date: 2019-07-18 03:52+0530\n"
-"Last-Translator: We Codify Co. <info@devopts.com>\n"
-"Language-Team: We Codify Co. <info@devopts.com>\n"
+"Last-Translator: We Codify Co. <info@growquest.io>\n"
+"Language-Team: We Codify Co. <info@growquest.io>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -321,7 +321,7 @@ msgid ""
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://wecodify.co/plugins/wplyr-media-block/"
+msgid "https://wplyr.wecodify.co/"
 msgstr ""
 
 #. Description of the plugin/theme
@@ -332,9 +332,9 @@ msgid ""
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "WeCodify Co."
+msgid "GrowQuest"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://devopts.com"
+msgid "https://growquest.io"
 msgstr ""
